--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>VALORIN | Anime-Inspired Streetwear</title>
+    <link rel="icon" type="image/x-icon" href="/favicon.png">
     <meta name="description" content="Bold streetwear inspired by anime culture, movie quotes, and aesthetic typography. Express your story through premium fashion." />
     <meta name="author" content="VALORIN" />
     <meta name="keywords" content="anime streetwear, anime clothing, japanese fashion, quote shirts, aesthetic hoodies, streetwear brand" />
